# job_scheduler

./: .gitignore  README.md  text.txt
backend/: DATABASE_SETUP.md  DB_SETUP_BEFORE_RUN.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  jobs.py  queue.py
backend/app/core/: config.py  enums.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  job.py  job_log.py  job_queue.py  job_snapshot.py  job_status_history.py
backend/app/repositories/: job_repository.py  queue_repository.py
backend/app/schemas/: common.py  job.py  queue.py
backend/app/services/: job_service.py
backend/app/utils/: command_builder.py
backend/backend_sql/: bootstrap_schema.sql
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/components/common/: MultiInputField.tsx
frontend/src/components/theme/: ThemeToggle.tsx
frontend/src/types/: job-config.ts
src/app/: layout.tsx  page.tsx
src/components/common/: CurlPreview.tsx  InputField.tsx  SectionWrapper.tsx
src/components/job-scheduler/: JobSchedulerBuilder.tsx
src/components/theme/: ThemeProvider.tsx
src/hooks/: use-job-form.ts
src/lib/: curl-generator.ts  validation.ts
